Write User Sign Up and JWT Token and Refresh Token
