# src/dto/otpRequest.go
@@ -1,5 +1,0 @@
-package dto
-
-type GetOtpRequest struct {
-	MobileNumber string `json:"mobileNumber" binding:"required"`
-}
