# src/handler/users.go
@@ -2,21 +2,69 @@ package handler
 
 import (
 	"RestGoTest/src/config"
+	"RestGoTest/src/constant"
 	"RestGoTest/src/dto"
 	"RestGoTest/src/helper"
 	"RestGoTest/src/services"
+
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
 type UsersHandler struct {
-	service *services.UserService
+	userUsecase  *services.UserService
+	otpUsecase   *services.OtpUsecase
+	tokenUsecase *services.TokenUsecase
+	config       *config.Config
 }
 
 func NewUserHandler(cfg *config.Config) *UsersHandler {
-	service := services.NewUserService(cfg)
-	return &UsersHandler{service: service}
+	userUsecase := services.NewUserService(cfg)
+	otpUsecase := services.NewOtpUsecase(cfg)
+	tokenUsecase := services.NewTokenUsecase(cfg)
+	return &UsersHandler{userUsecase: userUsecase, otpUsecase: otpUsecase, tokenUsecase: tokenUsecase, config: cfg}
+}
+
+// LoginByUsername godoc
+// @Summary LoginByUsername
+// @Description LoginByUsername
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.LoginByUsernameRequest true "LoginByUsernameRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/login-by-username [post]
+func (h *UsersHandler) LoginByUsername(c *gin.Context) {
+	req := new(dto.LoginByUsernameRequest)
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err))
+		return
+	}
+	token, err := h.userUsecase.LoginByUsername(c, req.Username, req.Password)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
+		return
+	}
+
+	// Set the refresh token in a cookie
+	http.SetCookie(c.Writer, &http.Cookie{
+		Name:     constant.RefreshTokenCookieName,
+		Value:    token.RefreshToken,
+		MaxAge:   int(h.config.JWT.RefreshTokenExpireDuration * 60),
+		Path:     "/",
+		Domain:   h.config.Server.Domain,
+		Secure:   true,
+		HttpOnly: true,
+		SameSite: http.SameSiteStrictMode,
+	})
+
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(token, true, helper.Success))
 }
 
 // SendOtp godoc
@@ -38,7 +86,7 @@ func (h *UsersHandler) SendOtp(c *gin.Context) {
 			helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err))
 		return
 	}
-	err = h.service.OtpService.SendOtp(req.MobileNumber)
+	err = h.otpUsecase.SendOtp(req.MobileNumber)
 	if err != nil {
 		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
 			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
@@ -46,4 +94,105 @@ func (h *UsersHandler) SendOtp(c *gin.Context) {
 	}
 	// TODO: Call internal SMS service
 	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(".پیامک با موفقیت ارسال شد", true, helper.Success))
+}
+
+// RegisterByUsername godoc
+// @Summary RegisterByUsername
+// @Description RegisterByUsername
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.RegisterUserByUsernameRequest true "RegisterUserByUsernameRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/register-by-username [post]
+func (h *UsersHandler) RegisterByUsername(c *gin.Context) {
+	req := new(dto.RegisterUserByUsernameRequest)
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err))
+		return
+	}
+	err = h.userUsecase.RegisterByUsername(c, req.ToRegisterUserByUsername())
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
+		return
+	}
+
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(nil, true, helper.Success))
+}
+
+// RegisterLoginByMobileNumber godoc
+// @Summary RegisterLoginByMobileNumber
+// @Description RegisterLoginByMobileNumber
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.RegisterLoginByMobileRequest true "RegisterLoginByMobileRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/login-by-mobile [post]
+func (h *UsersHandler) RegisterLoginByMobileNumber(c *gin.Context) {
+	req := new(dto.RegisterLoginByMobileRequest)
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err))
+		return
+	}
+	token, err := h.userUsecase.RegisterAndLoginByMobileNumber(c, req.MobileNumber, req.Otp)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
+		return
+	}
+
+	// Set the refresh token in a cookie
+	http.SetCookie(c.Writer, &http.Cookie{
+		Name:     constant.RefreshTokenCookieName,
+		Value:    token.RefreshToken,
+		MaxAge:   int(h.config.JWT.RefreshTokenExpireDuration * 60),
+		Path:     "/",
+		Domain:   h.config.Server.Domain,
+		Secure:   true,
+		HttpOnly: true,
+		SameSite: http.SameSiteStrictMode,
+	})
+
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(token, true, helper.Success))
+}
+
+// RefreshToken godoc
+// @Summary RefreshToken
+// @Description RefreshToken
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 401 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/refresh-token [post]
+func (h *UsersHandler) RefreshToken(c *gin.Context) {
+	token, err := h.tokenUsecase.RefreshToken(c)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
+		return
+	}
+	// Set the refresh token in a cookie
+	http.SetCookie(c.Writer, &http.Cookie{
+		Name:     constant.RefreshTokenCookieName,
+		Value:    token.RefreshToken,
+		MaxAge:   int(h.config.JWT.RefreshTokenExpireDuration * 60),
+		Path:     "/",
+		Domain:   h.config.Server.Domain,
+		Secure:   true,
+		HttpOnly: true,
+		SameSite: http.SameSiteStrictMode,
+	})
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(token, true, helper.Success))
 }
