# src/model/models.go
@@ -8,15 +8,29 @@ import (
 
 // User represents the users table
 type User struct {
-	ID           uint    `gorm:"primaryKey"`
-	FullName     string  `gorm:"size:100;not null"`
-	Email        string  `gorm:"size:120;not null;unique"`
-	PasswordHash string  `gorm:"type:text;not null"`
-	PhoneNumber  *string `gorm:"size:20"`
-	Role         string  `gorm:"type:enum('user','admin');default:'user'"`
-	IsActive     bool    `gorm:"default:true"`
-	CreatedAt    time.Time
-	UpdatedAt    time.Time
+	BaseModel
+	Username     string `gorm:"type:string;size:20;not null;unique"`
+	FirstName    string `gorm:"type:string;size:15;null"`
+	LastName     string `gorm:"type:string;size:25;null"`
+	MobileNumber string `gorm:"type:string;size:11;null;unique;default:null"`
+	Email        string `gorm:"type:string;size:64;null;unique;default:null"`
+	Password     string `gorm:"type:string;size:64;not null"`
+	Enabled      bool   `gorm:"default:true"`
+	UserRoles    *[]UserRole
+}
+
+type Role struct {
+	BaseModel
+	Name      string `gorm:"type:string;size:10;not null,unique"`
+	UserRoles *[]UserRole
+}
+
+type UserRole struct {
+	BaseModel
+	User   User `gorm:"foreignKey:UserId;constraint:OnUpdate:NO ACTION;OnDelete:NO ACTION"`
+	Role   Role `gorm:"foreignKey:RoleId;constraint:OnUpdate:NO ACTION;OnDelete:NO ACTION"`
+	UserId int
+	RoleId int
 }
 
 // GiftcardProvider represents the giftcard_providers table
