# src/validations/custom.go
@@ -1,7 +1,10 @@
 package validations
 
 import (
+	"RestGoTest/src/config"
+	"RestGoTest/src/util"
 	"errors"
+	"unicode"
 
 	"github.com/go-playground/validator/v10"
 )
@@ -27,4 +30,85 @@ func GetValidationErrors(err error) *[]ValidationError {
 		return &validationErrors
 	}
 	return nil
+}
+
+func IranianMobileNumberValidator(fld validator.FieldLevel) bool {
+
+	value, ok := fld.Field().Interface().(string)
+	if !ok {
+		return false
+	}
+
+	return util.IranianMobileNumberValidate(value)
+}
+
+func PasswordValidator(fld validator.FieldLevel) bool {
+	value, ok := fld.Field().Interface().(string)
+	if !ok {
+		fld.Param()
+		return false
+	}
+
+	return CheckPassword(value)
+}
+
+func CheckPassword(password string) bool {
+	cfg := config.GetConfig()
+	if len(password) < cfg.Password.MinLength {
+		return false
+	}
+
+	if cfg.Password.IncludeChars && !HasLetter(password) {
+		return false
+	}
+
+	if cfg.Password.IncludeDigits && !HasDigits(password) {
+		return false
+	}
+
+	if cfg.Password.IncludeLowercase && !HasLower(password) {
+		return false
+	}
+
+	if cfg.Password.IncludeUppercase && !HasUpper(password) {
+		return false
+	}
+
+	return true
+}
+
+func HasUpper(s string) bool {
+	for _, r := range s {
+		if unicode.IsUpper(r) && unicode.IsLetter(r) {
+			return true
+		}
+	}
+	return false
+}
+
+func HasLower(s string) bool {
+	for _, r := range s {
+		if unicode.IsLower(r) && unicode.IsLetter(r) {
+			return true
+		}
+	}
+	return false
+}
+
+func HasLetter(s string) bool {
+	for _, r := range s {
+		if unicode.IsLetter(r) {
+			return true
+		}
+	}
+	return false
+}
+
+func HasDigits(s string) bool {
+	for _, r := range s {
+		if unicode.IsDigit(r) {
+			return true
+		}
+	}
+	return false
 }
